--- a/module2_frontend/m2.lesson02.md
+++ b/module2_frontend/m2.lesson02.md
@@ -11,7 +11,7 @@
 ### Agenda
 1. More About React (VDom, React Fiber, class/fn, props/state
 2. Create react app
-3. State and events
+3. State and Events
 
 
 ---
@@ -38,7 +38,7 @@ Virtual DOM (See further reading section)
 * React Fiber (See further reading section)
 * Components:
     * Class vs Functional
-    * Props vs state
+    * Props vs State
     * Class with props - remember ***this***?
     <div>
         <img src="./assets/this.gif">
@@ -49,11 +49,9 @@ Virtual DOM (See further reading section)
 
 
 ### Create React App
-* <!-- .element: class="fragment" -->
-See the [Docs](https://github.com/facebook/create-react-app)
+* See the<!-- .element: class="fragment" --> [Docs](https://github.com/facebook/create-react-app)
 
-* <!-- .element: class="fragment" -->
-A word about [npx](https://blog.npmjs.org/post/162869356040/introducing-npx-an-npm-package-runner)
+* A word about <!-- .element: class="fragment" --> [npx](https://blog.npmjs.org/post/162869356040/introducing-npx-an-npm-package-runner)
 
 ---
 ### Create React App
@@ -86,7 +84,7 @@ Practice: Move the todo-app code from last class into the app you'ev just create
 
 ---
 ### [State](https://reactjs.org/docs/state-and-lifecycle.html) and [Events](https://reactjs.org/docs/handling-events.html)
-Repo - react-todo-list <br/>
+Practice: Repo - react-todo-list <br/>
 Requirements - The user should be able to:
 * Add new todo item (with text provided by the user)
 * Mark the items as "Completed"
