--- a/module2_frontend/m2.lesson04.md
+++ b/module2_frontend/m2.lesson04.md
@@ -10,7 +10,8 @@
 ### Agenda
 1. Introduction to Hooks
 2. CSS pre-processing
-3. The concept of redux
+3. Building a Style-kit
+4. Styling in React
 
 
 ---
@@ -42,34 +43,69 @@ Add pre-processing to building Trivia app
 
 ---
 
-### The Concept of redux
-[Redux Explain in a simple way](https://www.youtube.com/watch?v=nFryvdyMI8s)
-<iframe width="420" height="315"
-src="https://www.youtube.com/embed/nFryvdyMI8s" allowfullscreen>
-</iframe>
-
----
-
-### The Concept of redux
-
-<img src="./assets/redux.png" height="220px">
-* store - manage your stuff
-* state - object represent app in a specific time
-* action - plain object represent an event
-* reducer - transform old state + action to a new state
-
----
-
-### The Concept of redux
-
-<img src="./assets/redux-with-code.png" height="220px">
-
-
+### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
 
 
 ---
 
-### Further
+### Styling in React
+Inline vs Css files
+```
+// Circle.css
+.circle {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+}
+    
+// Circle.js
+import 'Circle.css'
+
+const Todo: React.FC = () => {
+  return (
+      <div className="circle"></div>
+  )
+};
+```
+
+---
+### Styling in React
+Inline vs Css files
+```ts
+const Todo: React.FC = () => {
+  const styles = {
+    circle: {
+      border-radius: '50%',
+      height: '100px',
+      width: '100px'
+    }
+  }
+
+  return (
+      <div style={styles.circle}></div>
+  )
+};
+```
+
+pros:
+no styling collisions
+encourage component thinking
+state-dependent changes are straightforward
+
+cons:
+can't use pseudo-selectors and media queries without external libraries
+global styling
+require learning new technique
+
+
+---
+
+### Styling in React
+Material UI
+
+---
+
+### Further reading
 Watch Ryan Florence's talk about [React Hooks (1:00:00 - 1:12:00)](https://www.youtube.com/watch?v=dpw9EHDh2bM)
 [Introducing React Hooks - 20 minutes](https://www.youtube.com/watch?v=mxK8b99iJTg)
 
@@ -79,5 +115,38 @@ pre-processing
 ---
 
 ### Homework
-Trivia
-project 2: playbuzz
+Trivia App:
+* Finish converting to hooks
+* Create a Style-guide
+* Style the app as you like
+
+---
+
+### Project 2: [PlayBuzz](https://www.playbuzz.com/chalync10/what-superhero-are-you)
+Flow:
+1. User select a quiz from a list 
+2. First question presented for the selected quiz
+3. User select click an answer to go next question
+4. After user answered all questions
+  - a summary of results is presented
+  - User can choose to redo quiz / select different quiz
+---
+
+### Project 2: [PlayBuzz](https://www.playbuzz.com/chalync10/what-superhero-are-you)
+Requirements:
+* At least 3 quizzes (3 json files)
+* Style-Guide + Nice styling
+* Progress bar
+* Each question has a picture / Impressive styled text with effects
+* Server side (for static files and json-storage)
+* Frontend in react + redux
+* Single repo
+
+---
+
+### Project 2: [PlayBuzz](https://www.playbuzz.com/chalync10/what-superhero-are-you)
+Extra:
+* On each state change - save it to local storage
+* If user reload page - it will recover last saved state
+* Deploy to heroku
+* Allow user to add a quiz (Without pictures, or - using external urls)
