--- a/module2_frontend/m2.lesson02.md
+++ b/module2_frontend/m2.lesson02.md
@@ -9,7 +9,7 @@
 
 
 ### Agenda
-1. More About React (VDom, React Fiber, class/fn, props/state
+1. More About React (VDom, React Fiber, class/fn, props/state)
 2. Create react app
 3. State and Events
 
@@ -56,14 +56,16 @@ Virtual DOM (See further reading section)
 ---
 ### Create React App
 The Toolbox (and what each tool do:)
-* <!-- .element: class="fragment" -->
-Package management - npm
-* <!-- .element: class="fragment" -->
-Bundler - [webpack](https://webpack.js.org/)
-* <!-- .element: class="fragment" -->
-Transpiler/Compiler - babel (JSX/TS/es6 to es5)
-* <!-- .element: class="fragment" -->
-Typescript & ES modules
+* Package management - npm
+<!-- .element: class="fragment" -->
+* Bundler <!-- .element: class="fragment" --> - [webpack](https://webpack.js.org/)
+
+* Transpiler/Compiler - babel (JSX/TS/es6 to es5)
+<!-- .element: class="fragment" -->
+
+* Typescript & ES modules
+<!-- .element: class="fragment" -->
+
 
 create-react-app uses webpack and babel under the hood -
 you most likely never touch them directly!
