--- a/module2_frontend/m2.lesson05.md
+++ b/module2_frontend/m2.lesson05.md
@@ -97,7 +97,11 @@ Live coding and practice
 
 ---
 
-### Redux middlewares
+### Redux [middleware](https://redux.js.org/advanced/middleware)
+Read
+
+Add scheme / Img
+
 Live coding and practice
 (files in demo library)
 
@@ -107,6 +111,7 @@ Live coding and practice
 ### Further reading
 * [Redux - motivation](https://redux.js.org/introduction/motivation)
 * [Redux - getting-started](https://redux.js.org/introduction/getting-started)
+* [middleware](https://redux.js.org/advanced/middleware)
 
 ---
 
