--- a/module2_frontend/m2.lesson03.md
+++ b/module2_frontend/m2.lesson03.md
@@ -148,7 +148,7 @@ Trivia app requirements
 * User see 1 question at a time
 * Each question has 4 answers (Buttons)
 * User get right/wrong indication
-* Header shows correct/total scores
+* Header shows number of correct/wrong answers
 * When finished - show score summary + "Try again?" button
 
 ---
