--- a/module2_frontend/m2.lesson04.md
+++ b/module2_frontend/m2.lesson04.md
@@ -1,5 +1,5 @@
 ## Module 2 Lesson 4
-### React Hooks and Redux intro
+### React Hooks and Styling tools
 (This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
@@ -31,20 +31,37 @@ Practice: On your Trivia app, convert class components to functional using hooks
  
 ---
 
-### CSS pre-processing
-Motivation
-less/sass/scss etc
-scss tools
+### [CSS pre-processing](https://htmlmag.com/article/an-introduction-to-css-preprocessors-sass-less-stylus)
+* Motivation - What's wrong with plain css?
+* less/sass/scss etc
+* [scss features](https://sass-lang.com/guide)
 
 ---
 
 ### CSS pre-processing
-Add pre-processing to building Trivia app
+Practice: Add pre-processing to building Trivia app and test it
 
 ---
 
 ### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
+* Create a kit and implement - Don't "style as you go"
+<!-- .element: class="fragment" -->
+* Set rules for repeating elements - buttons, cards, panels etc
+<!-- .element: class="fragment" -->
+* Rules should determine every setting which may change, like:
+<!-- .element: class="fragment" -->
+    - padding / margin
+    - height / width
+    - colors
+    - fonts
 
+---
+### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
+* Set well-determined color pallet - 2-8 colors should be enough
+<!-- .element: class="fragment" -->
+* Rules should include all "exceptional cases"
+<!-- .element: class="fragment" -->
+* <!-- .element: class="fragment" -->[BEM](http://getbem.com/introduction/) and [Bootstrap](https://getbootstrap.com/docs/4.3/components/buttons/)
 
 ---
 
@@ -87,30 +104,38 @@ const Todo: React.FC = () => {
 };
 ```
 
-pros:
-no styling collisions
-encourage component thinking
-state-dependent changes are straightforward
+---
+### Styling in React
+Inline-Styling Pros:
+* No styling collisions
+* Encourage component thinking
+* State-dependent changes are straightforward
 
-cons:
-can't use pseudo-selectors and media queries without external libraries
-global styling
-require learning new technique
+Inline-Styling Cons:
+* Can't use pseudo-selectors and media queries without external libraries
+* Can't use css tools like pre-processing 
+* No global styling
+* Learning / adjustment time
 
 
 ---
 
 ### Styling in React
-Material UI
+* [Material Design](https://material.io/)
+* [Material UI](https://material-ui.com/)
 
 ---
 
 ### Further reading
-Watch Ryan Florence's talk about [React Hooks (1:00:00 - 1:12:00)](https://www.youtube.com/watch?v=dpw9EHDh2bM)
-[Introducing React Hooks - 20 minutes](https://www.youtube.com/watch?v=mxK8b99iJTg)
-
-pre-processing
-
+* Watch Ryan Florence's talk about [React Hooks (1:00:00 - 1:12:00)](https://www.youtube.com/watch?v=dpw9EHDh2bM)
+* [Introducing React Hooks - 20 minutes](https://www.youtube.com/watch?v=mxK8b99iJTg)
+* [Use hooks](https://usehooks.com/)
+* [sass pre-processing](https://sass-lang.com/guide)
+* [styled-components](https://www.styled-components.com/docs/basics#motivation)
+* [Material UI - style basics](https://material-ui.com/styles/basics/)
+* [BEM, SASS and Bootstrap](https://medium.com/@andersonorui_/bem-sass-and-bootstrap-9f89dc07d20f)
+* [All You Need To Know About CSS-in-JS](https://hackernoon.com/all-you-need-to-know-about-css-in-js-984a72d48ebc)
+* [Why You Shouldn’t Style React Components With JavaScript](http://jamesknelson.com/why-you-shouldnt-style-with-javascript/)
 
 ---
 
@@ -119,6 +144,9 @@ Trivia App:
 * Finish converting to hooks
 * Create a Style-guide
 * Style the app as you like
+
+### Extra
+* read [How to structure a Sass project](http://thesassway.com/beginner/how-to-structure-a-sass-project)
 
 ---
 
@@ -150,3 +178,4 @@ Extra:
 * If user reload page - it will recover last saved state
 * Deploy to heroku
 * Allow user to add a quiz (Without pictures, or - using external urls)
+* Random questions order
