--- a/module2_frontend/m2.lesson05.md
+++ b/module2_frontend/m2.lesson05.md
@@ -6,7 +6,7 @@
 
 
 ### Prep
-*[Redux Explain in a simple way](https://www.youtube.com/watch?v=nFryvdyMI8s)
+* [Redux Explain in a simple way](https://www.youtube.com/watch?v=nFryvdyMI8s)
 
 ### Agenda
 1. The problem with large scale applications
@@ -64,13 +64,13 @@ They may be in different parts of the app (not always parent child)
 
 ### What is Redux? - scheme
 
-<img src="./assets/redux-with-code.png" height="220px">
+<img src="./assets/redux-with-code.png">
 
 ---
 
 ### What is Redux?
 [Redux Explained in a simple way](https://www.youtube.com/watch?v=nFryvdyMI8s)
-<iframe width="420" height="315"
+<iframe width="640" height="480"
 src="https://www.youtube.com/embed/nFryvdyMI8s" allowfullscreen>
 </iframe>
 
@@ -98,12 +98,11 @@ Live coding and practice
 ---
 
 ### Redux [middleware](https://redux.js.org/advanced/middleware)
-Read
-
-Add scheme / Img
+<img src="./assets/redux-middleware.png">
+<!-- .element: class="fragment" -->
 
 Live coding and practice
-(files in demo library)
+<!-- .element: class="fragment" -->
 
 
 ---
