--- a/module2_frontend/m2.lesson04.md
+++ b/module2_frontend/m2.lesson04.md
@@ -39,7 +39,7 @@ Practice: On your Trivia app, convert class components to functional using hooks
 ---
 
 ### CSS pre-processing
-Practice: Add pre-processing to building Trivia app and test it
+Practice: [add sass](https://facebook.github.io/create-react-app/docs/adding-a-sass-stylesheet) to Trivia app and test it
 
 ---
 
