--- a/module2_frontend/m2.lesson04.md
+++ b/module2_frontend/m2.lesson04.md
@@ -57,11 +57,11 @@ Practice: [add sass](https://facebook.github.io/create-react-app/docs/adding-a-s
 
 ---
 ### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
-* Set well-determined color pallet - 2-8 colors should be enough
-<!-- .element: class="fragment" -->
+* Set well-determined [color pallet](https://material-ui.com/customization/color/#color-tool) - 2-8 colors should be enough
+
 * Rules should include all "exceptional cases"
 <!-- .element: class="fragment" -->
-* <!-- .element: class="fragment" -->[BEM](http://getbem.com/introduction/) and [Bootstrap](https://getbootstrap.com/docs/4.3/components/buttons/)
+* [BEM](http://getbem.com/introduction/) and<!-- .element: class="fragment" -->  [Bootstrap](https://getbootstrap.com/docs/4.3/components/buttons/)
 
 ---
 
