--- a/module2_frontend/m2.lesson06.md
+++ b/module2_frontend/m2.lesson06.md
@@ -43,8 +43,8 @@ and state without passing states/props all over.
 * Application state can be saved for later load.
 <!-- .element: class="fragment" -->
 
-* <!-- .element: class="fragment" -->
-Redux considered as the industry standard as react state management.
+* Redux considered as the industry standard as react state management.
+<!-- .element: class="fragment" -->
 
 ---
 
