--- a/module2_frontend/m2.lesson04.md
+++ b/module2_frontend/m2.lesson04.md
@@ -8,11 +8,7 @@
 * [Hooks](https://reactjs.org/docs/hooks-overview.html)
 
 ### Agenda
-1. Introduction to Hooks
-2. CSS pre-processing
-3. Building a Style-kit
-4. Styling in React
-
+Introduction to Hooks
 
 ---
 
@@ -31,111 +27,10 @@ Practice: On your Trivia app, convert class components to functional using hooks
  
 ---
 
-### [CSS pre-processing](https://htmlmag.com/article/an-introduction-to-css-preprocessors-sass-less-stylus)
-* Motivation - What's wrong with plain css?
-* less/sass/scss etc
-* [scss features](https://sass-lang.com/guide)
-
----
-
-### CSS pre-processing
-Practice: [add sass](https://facebook.github.io/create-react-app/docs/adding-a-sass-stylesheet) to Trivia app and test it
-
----
-
-### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
-* Create a kit and implement - Don't "style as you go"
-<!-- .element: class="fragment" -->
-* Set rules for repeating elements - buttons, cards, panels etc
-<!-- .element: class="fragment" -->
-* Rules should determine every setting which may change, like:
-<!-- .element: class="fragment" -->
-    - padding / margin
-    - height / width
-    - colors
-    - fonts
-
----
-### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
-* Set well-determined [color pallet](https://material-ui.com/customization/color/#color-tool) - 2-8 colors should be enough
-
-* Rules should include all "exceptional cases"
-<!-- .element: class="fragment" -->
-* [BEM](http://getbem.com/introduction/) and<!-- .element: class="fragment" -->  [Bootstrap](https://getbootstrap.com/docs/4.3/components/buttons/)
-
----
-
-### Styling in React
-Inline vs Css files
-```
-// Circle.css
-.circle {
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-}
-    
-// Circle.js
-import 'Circle.css'
-
-const Todo: React.FC = () => {
-  return (
-      <div className="circle"></div>
-  )
-};
-```
-
----
-### Styling in React
-Inline vs Css files
-```ts
-const Todo: React.FC = () => {
-  const styles = {
-    circle: {
-      border-radius: '50%',
-      height: '100px',
-      width: '100px'
-    }
-  }
-
-  return (
-      <div style={styles.circle}></div>
-  )
-};
-```
-
----
-### Styling in React
-Inline-Styling Pros:
-* No styling collisions
-* Encourage component thinking
-* State-dependent changes are straightforward
-
-Inline-Styling Cons:
-* Can't use pseudo-selectors and media queries without external libraries
-* Can't use css tools like pre-processing 
-* No global styling
-* Learning / adjustment time
-
-
----
-
-### Styling in React
-* [Material Design](https://material.io/)
-* [Material UI](https://material-ui.com/)
-
----
-
 ### Further reading
 * Watch Ryan Florence's talk about [React Hooks (1:00:00 - 1:12:00)](https://www.youtube.com/watch?v=dpw9EHDh2bM)
 * [Introducing React Hooks - 20 minutes](https://www.youtube.com/watch?v=mxK8b99iJTg)
 * [Use hooks](https://usehooks.com/)
-* [sass pre-processing](https://sass-lang.com/guide)
-* [styled-components](https://www.styled-components.com/docs/basics#motivation)
-* [Material UI - style basics](https://material-ui.com/styles/basics/)
-* [BEM, SASS and Bootstrap](https://medium.com/@andersonorui_/bem-sass-and-bootstrap-9f89dc07d20f)
-* [All You Need To Know About CSS-in-JS](https://hackernoon.com/all-you-need-to-know-about-css-in-js-984a72d48ebc)
-* [Why You Shouldn’t Style React Components With JavaScript](http://jamesknelson.com/why-you-shouldnt-style-with-javascript/)
 
 ---
 
