--- a/module2_frontend/m2.lesson07.md
+++ b/module2_frontend/m2.lesson07.md
@@ -44,6 +44,16 @@ Practice: [add sass](https://facebook.github.io/create-react-app/docs/adding-a-s
     - fonts
 
 ---
+
+### Building a Style-Guide
+Practice: build a simple style-guide:
+* Variables:
+  * Pallet: primary and secondary color
+  * Set font sizes
+* Set basic elements classes (Buttons, List items etc )
+
+---
+
 ### [Building a Style-Kit / Style-Guide](https://designmodo.com/create-style-guides/)
 * Set well-determined [color pallet](https://material-ui.com/customization/color/#color-tool) - 2-8 colors should be enough
 
@@ -51,6 +61,8 @@ Practice: [add sass](https://facebook.github.io/create-react-app/docs/adding-a-s
 <!-- .element: class="fragment" -->
 
 * [BEM](http://getbem.com/introduction/) and<!-- .element: class="fragment" -->  [Bootstrap](https://getbootstrap.com/docs/4.3/components/buttons/)
+
+* [BEM-with-Sass](http://mikefowler.me/journal/2013/10/17/support-for-bem-modules-sass-3.3)<!-- .element: class="fragment" -->
 
 ---
 
@@ -75,6 +87,7 @@ const Todo: React.FC = () => {
 ```
 
 ---
+
 ### Styling in React
 Inline vs Css files
 ```ts
@@ -94,6 +107,7 @@ const Todo: React.FC = () => {
 ```
 
 ---
+
 ### Styling in React
 Inline-Styling Pros:
 * No styling collisions
@@ -106,12 +120,22 @@ Inline-Styling Cons:
 * No global styling
 * Learning / adjustment time
 
+---
+
+### Styling in React
+Let's Material it
+* [Material Design](https://material.io/)
+* [Material UI](https://material-ui.com/)
+
 
 ---
 
 ### Styling in React
-* [Material Design](https://material.io/)
-* [Material UI](https://material-ui.com/)
+Practice: 
+* Add Material UI 4 branch
+* Use AppBar, Buttons and List Items on Trivia app
+* Stick with scss as much as possible
+* Use BEM / Keep the standard react css naming convention
 
 ---
 
