--- a/module2_frontend/m2.lesson08.md
+++ b/module2_frontend/m2.lesson08.md
@@ -13,6 +13,16 @@
 1. SPA & Routing
 2. React Router
 
+
+---
+
+### SPA & Routing
+SPA vs MPA
+* Single sync request vs Multiple
+* Single HTML & api calls vs Multiple HTML pages
+* By default, URL does not change according to resource active
+* This may cause some problems
+
 ---
 
 ### SPA & Routing
@@ -26,21 +36,137 @@ The problem of sharing in a [SPA](https://en.wikipedia.org/wiki/Single-page_appl
 
 ### SPA & Routing
 
-Another issue: Browser back/next actions 
+The problem with Browser back/next actions 
 
 <div>
-The solution: [React Router](https://angular.io/generated/live-examples/router/stackblitz.html)
+The solution: [React Router DOM](https://reacttraining.com/react-router/web/example/basic)
 </div>
 <!-- .element: class="fragment" -->
 
+Note: you do not need to install react-router
+
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+* What does it do?
+<!-- .element: class="fragment" -->
+
+* This is not a facebook project
+<!-- .element: class="fragment" -->
+
+* React Router VS React Router DOM
+<!-- .element: class="fragment" -->
+
+* Read Quick Start + Basic Components
+<!-- .element: class="fragment" -->
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+NavBar Vanilla js Routing
+```
+<nav>
+  <ul>
+    <li>
+      <a href="/home">Home</a>
+    </li>
+    <li>
+      <a href="/about">About</a>
+    </li>
+  </ul>
+</nav>
+
+```
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+NavBar using  React Router
+```
+<nav>
+  <ul>
+    <li>
+      <NavLink to="/home">Home</NavLink>
+    </li>
+    <li>
+      <NavLink to="/about">About</NavLink>
+    </li>
+  </ul>
+</nav>
+
+```
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+Setting up (Live Demo)
+* `npm i react-router-dom`
+* Add Browser-Router
+* Add Routes
+* Add Links, Nav Links etc
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+Things to remember:
+
+* Multiple Routes can applied for the same URL
+<!-- .element: class="fragment" -->
+
+* Route & Switch
+<!-- .element: class="fragment" -->
+
+* `exact`
+<!-- .element: class="fragment" -->
+
+* Absolute VS Relative Paths (+nested routes)
+<!-- .element: class="fragment" -->
+
+* Component vs Render
+<!-- .element: class="fragment" -->
+
+
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+Things to remember:
+
+* NavLinks with / without `activeClassName`
+<!-- .element: class="fragment" -->
+
+* [Redirect](https://reacttraining.com/react-router/web/example/auth-workflow)
+
+* [URL-Params](https://reacttraining.com/react-router/web/example/url-params)
+
+* [Dynamic Routes](https://reacttraining.com/react-router/web/example/sidebar)
+
+* [Composed Routes (RouteConfig)](https://reacttraining.com/react-router/web/example/route-config)
+
+---
+
+### [React Router DOM](https://github.com/ReactTraining/react-router)
+Practice:
+
+1. Create a simple app with 3 routes: 
+  Home, Feed (Show, multiple Posts) and single Post page
+2. Extra: add search option, on Home page. 
+Search will change route to Search Page, example: /search?q="london"
+3. Add routes to Trivia app. each question will have it's own route
 
 ---
 
 ### Further reading
-
+* [React router redux integration](https://reacttraining.com/react-router/web/guides/redux-integration)
 
 ---
 ### Home Work:
-
+* Finish class practice
+* Add routes to PlayBuzz Project
 
 ### Extra
+Implement Search page from class practice
+* Get query string from route
+* Search in data array
+* Display results matching the query
