--- a/module2_frontend/m2.lesson07.md
+++ b/module2_frontend/m2.lesson07.md
@@ -89,7 +89,7 @@ const Todo: React.FC = () => {
 ---
 
 ### Styling in React
-Inline vs Css files
+Inline (CSS-in-JS) vs css/scss files
 ```ts
 const Todo: React.FC = () => {
   const styles = {
