--- a/module2_frontend/m2.lesson08.md
+++ b/module2_frontend/m2.lesson08.md
@@ -11,8 +11,7 @@
 
 ### Agenda
 1. SPA & Routing
-2. React Router
-
+2. React Router DOM
 
 ---
 
@@ -143,6 +142,8 @@ Things to remember:
 * [Dynamic Routes](https://reacttraining.com/react-router/web/example/sidebar)
 
 * [Composed Routes (RouteConfig)](https://reacttraining.com/react-router/web/example/route-config)
+
+* [withRouter](https://reacttraining.com/react-router/web/api/withRouter)
 
 ---
 
