--- a/module2_frontend/m2.lesson09.md
+++ b/module2_frontend/m2.lesson09.md
@@ -14,6 +14,7 @@
 2. Loading Indication
 3. Fetch & Store
 4. API middleware
+5. Thunk and Sagas
 
 ---
 
@@ -112,6 +113,7 @@ Middleware can
 * Fetch data
 * Route logic flow(fire data according to state / action)
 
+---
 
 ### API middleware
 Practice - step 3:
@@ -122,11 +124,18 @@ Split API middleware to:
 
 ---
 
+### Thunk and Sagas
+* [Redux-Thunk](https://github.com/reduxjs/redux-thunk)
+* [Redux-Saga](https://github.com/redux-saga/redux-saga)
+
+---
+
 ### Further reading
 * [How to fetch data with React Hooks?](https://www.robinwieruch.de/react-hooks-fetch-data/)
 * [How to fetch data inside react apps](https://itnext.io/how-to-fetch-data-inside-react-apps-2ca430c202c5)
 * [create-react-app Docs about fetching data](https://facebook.github.io/create-react-app/docs/fetching-data-with-ajax-requests)
 * [Patterns for data fetching in React](https://blog.logrocket.com/patterns-for-data-fetching-in-react-981ced7e5c56/)
+* [Redux-Thunk vs. Redux-Saga](https://decembersoft.com/posts/redux-thunk-vs-redux-saga/)
 
 ---
 ### Home Work:
