--- a/module2_frontend/m2.lesson08.md
+++ b/module2_frontend/m2.lesson08.md
@@ -160,6 +160,7 @@ Search will change route to Search Page, example: /search?q="london"
 
 ### Further reading
 * [React router redux integration](https://reacttraining.com/react-router/web/guides/redux-integration)
+* [React router typescript](https://www.pluralsight.com/guides/react-router-typescript)
 
 ---
 ### Home Work:
