--- a/module2_frontend/m2.lesson11.md
+++ b/module2_frontend/m2.lesson11.md
@@ -65,6 +65,22 @@ Don't
 ---
 
 ### Writing unit tests
+* Files: `componentName.test.ts` - will [automatically picked up by jest](https://facebook.github.io/create-react-app/docs/running-tests)
+
+* syntax:
+
+```
+import sum from './sum';
+
+it('sums numbers', () => {
+  expect(sum(1, 2)).toEqual(3);
+  expect(sum(2, 2)).toEqual(4);
+});
+```
+
+---
+
+### Writing unit tests
 Tools:
 
 * Test runner (Jest) - execute tests 
@@ -86,23 +102,10 @@ Installs (Jest already included):
 
 * types for each package (`@types\PACKAGE`)
 
-
 ---
 
 ### Writing unit tests
-* Files: `componentName.test.ts` - will [automatically picked up by jest](https://facebook.github.io/create-react-app/docs/running-tests)
-
-* syntax:
-
-```
-import sum from './sum';
-
-it('sums numbers', () => {
-  expect(sum(1, 2)).toEqual(3);
-  expect(sum(2, 2)).toEqual(4);
-});
-```
-
+Demo and practice: `jest-playground` repo
 
 ---
 
@@ -132,6 +135,9 @@ it('renders without crashing', () => {
 
 ```
 For the current app - this should fail (why? - try it out!)
+
+(Answer: Router & Redux)
+<!-- .element: class="fragment" -->
 
 ---
 
@@ -171,12 +177,35 @@ describe('<Profile/>', () => {
 ### Writing unit tests
 Practice:
 
-Write unit test:
+Write unit test for OkatCupid ProfileCard:
 
 * test img className is correct
 
 * test img title is correct
 
+
+---
+
+### Writing unit tests
+Test [reducers](https://redux.js.org/recipes/writing-tests#reducers):
+```
+describe('todos reducer', () => {
+ it('should handle ADD_TODO', () => {
+    const initialState = [];
+    const action = { type: 'ADD_TODO', payload: 'Call Max'}
+    const updatedState = ['Call Max'];
+    
+    expect(reducer(initialState, action).toEqual(updatedState)
+  });
+});
+```
+
+---
+
+### Writing unit tests
+Practice:
+
+Write 3 unit test for React-Trivia reducers
 
 ---
 
@@ -204,7 +233,8 @@ Write unit test:
 ---
 
 ### Further reading
-* [hirez free testing theory](https://school.hirez.io/)
+* [Introduction To Testing With Jest](https://www.youtube.com/watch?v=D9DdY2WmM-s)
+* [How to debug jest tests](https://artsy.github.io/blog/2018/08/24/How-to-debug-jest-tests/)
 
 ---
 
