--- a/module2_frontend/m2.lesson13.md
+++ b/module2_frontend/m2.lesson13.md
@@ -88,8 +88,9 @@ Question - why did we removed `homepage` from `package.json` before the build?
 Practice - [build and deploy to github pages](https://facebook.github.io/create-react-app/docs/deployment#github-pages-https-pagesgithubcom)
 
 
-intro about static files and public folder
-intro about Environment vars
+* intro about static files and [public folder](https://facebook.github.io/create-react-app/docs/using-the-public-folder)
+* intro about [Environment vars](https://facebook.github.io/create-react-app/docs/adding-custom-environment-variables)
+* [Advanced Configuration](https://facebook.github.io/create-react-app/docs/advanced-configuration)
 
 
 ---
