--- a/module2_frontend/m2.lesson14.md
+++ b/module2_frontend/m2.lesson14.md
@@ -135,8 +135,9 @@ Wrap up:
 ---
 
 ### Further reading
-* [Add to Home Screen](https://developers.google.com/web/fundamentals/app-install-banners/)
+* [Brief guide to PWA in 2019](https://naturaily.com/blog/pwa-guide)
 * [Seriously, though. What is a progressive web app?](https://medium.com/@amberleyjohanna/seriously-though-what-is-a-progressive-web-app-56130600a093)
+* [Add to Home Screen](https://developers.google.com/web/fundamentals/app-install-banners/)
 * [Service workers has finally landed in iOS! Now what?](https://dev.to/oninross/service-workers-has-finally-landed-in-ios--now-what-110o)
 * [6 myths of Progressive Web Apps](https://medium.com/samsung-internet-dev/6-myths-of-progressive-web-apps-81e28ca9d2b1)
 
