--- a/module2_frontend/m2.lesson14.md
+++ b/module2_frontend/m2.lesson14.md
@@ -17,15 +17,15 @@
 
 ---
 
-https://blog.bitsrc.io/how-to-build-a-react-progressive-web-application-pwa-b5b897df2f0a
-
 ### What is a PWA?
 
 
 [PWA intro](https://www.youtube.com/watch?v=DfFlBWCQjzA)
-<iframe width="640" height="480"
-src="https://www.youtube.com/watch?v=DfFlBWCQjzA" allowfullscreen>
-</iframe>
+
+
+<iframe width="560" height="315" 
+src="https://www.youtube.com/embed/DfFlBWCQjzA" frameborder="0" allow="accelerometer; 
+autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ---
@@ -39,7 +39,7 @@ src="https://www.youtube.com/watch?v=DfFlBWCQjzA" allowfullscreen>
 
 ### What is a PWA?
 <div>
-    <img src="./assets/pwa.jpg" height=300>
+    <img src="./assets/pwa.jpeg" height=500>
 </div>
 
 ---
@@ -51,7 +51,7 @@ src="https://www.youtube.com/watch?v=DfFlBWCQjzA" allowfullscreen>
   * Fast
   * Home screen launcher icon
   * Linkable
-  * Standalone feel (not URL bar etc.)
+  * Standalone feel (no URL bar etc.)
   * Notification
   * Safe (require HTTPS)
   
@@ -60,9 +60,10 @@ src="https://www.youtube.com/watch?v=DfFlBWCQjzA" allowfullscreen>
 
 ### Requirements: Breaking it down
 
-* [What's PWA? - Web vs Native Characteristics (2:54 - 5:15)](https://www.youtube.com/watch?time_continue=174&v=2KhRmFHLuhE)
+[What's PWA? - Web vs Native (2:54 - 5:15)](https://www.youtube.com/watch?time_continue=174&v=2KhRmFHLuhE)
+
 <iframe width="640" height="480"
-src="https://www.youtube.com/watch?time_continue=174&v=2KhRmFHLuhE" allowfullscreen>
+src="https://www.youtube.com/embed/watch?time_continue=174&v=2KhRmFHLuhE" allowfullscreen>
 </iframe>
 
 ---
@@ -88,10 +89,12 @@ We'll need 3 things to make a PWA from a web-app:
 ### Requirements: Breaking it down
 
 [manifest.json](https://developers.google.com/web/fundamentals/web-app-manifest/) - describe the app:
-  * App [short/ long name)](https://developers.google.com/web/fundamentals/web-app-manifest/#name)
+  * App [short / long name)](https://developers.google.com/web/fundamentals/web-app-manifest/#name)
   * [Display](https://developers.google.com/web/fundamentals/web-app-manifest/#display) mode and [icons](https://developers.google.com/web/fundamentals/web-app-manifest/#icons)
   * Required to [install app banner](https://developers.google.com/web/fundamentals/app-install-banners/)
   * Theme and Splash screen
+
+---
 
 Remember to link (in `index.html`)
   * [manifest file](https://developers.google.com/web/fundamentals/web-app-manifest/#tell_the_browser_about_your_manifest)
@@ -113,6 +116,15 @@ Remember to link (in `index.html`)
 
   
 ---
+### Go PWA!
+Checklist for up [Add to Home Screen banner](https://developers.google.com/web/fundamentals/app-install-banners/)
+* manifest: names  start_url, icons 192 512
+* serviceWorker.unregister() => serviceWorker.register();
+* add icons to html
+* HTTPS
+* names (name vs short_name) & splash spec
+
+---
 
 ### Go PWA!
 Wrap up:
@@ -123,15 +135,6 @@ Wrap up:
 * [Patterns for Promoting PWA Installation](https://developers.google.com/web/fundamentals/app-install-banners/promoting-install-mobile)
 * What's next?
 
-
-[Add to Home Screen](https://developers.google.com/web/fundamentals/app-install-banners/)
-* manifest: names  start_url, icons 192 512
-* serviceWorker.unregister() => serviceWorker.register();
-* add icons to html
-* HTTPS
-
-* manifest: names (name vs short_name), splash
-
 ---
 
 ### Further reading
@@ -140,9 +143,10 @@ Wrap up:
 * [Add to Home Screen](https://developers.google.com/web/fundamentals/app-install-banners/)
 * [Service workers has finally landed in iOS! Now what?](https://dev.to/oninross/service-workers-has-finally-landed-in-ios--now-what-110o)
 * [6 myths of Progressive Web Apps](https://medium.com/samsung-internet-dev/6-myths-of-progressive-web-apps-81e28ca9d2b1)
+* [An explanation of Progressive Web Apps for the non-PWA crowd](https://www.freecodecamp.org/news/an-explanation-of-progressive-web-apps-for-the-non-pwa-crowd-8a400e275ea1/)
+* [Upload PWA to Playstore](https://pwa2apk.com/?)
 
 ---
-
 
 ### Home Work:
 * Make your playbuzz app a PWA
