--- a/module2_frontend/m2.lesson15.md
+++ b/module2_frontend/m2.lesson15.md
@@ -12,7 +12,7 @@
 ### Agenda
 1. Overview
 2. Getting started
-3. Getting started
+3. Building App with RN
 4. Wrapping Okat-Cupid
 
 ---
@@ -23,13 +23,86 @@
 
 ---
 
-### Getting started
+### [Getting started](https://facebook.github.io/react-native/docs/getting-started)
 * Getting started with  [Expo](https://facebook.github.io/react-native/docs/getting-started)
 * [Expo vs React Native CLI](https://levelup.gitconnected.com/expo-vs-react-native-cli-a-guide-to-bootstrapping-new-react-native-apps-6f0fcafee58f)
+* [Managed and Bare Workflows](https://docs.expo.io/versions/v33.0.0/introduction/managed-vs-bare/)
+* Download and Install expo on your smart-phone
+
+---
+
+### [Getting started](https://facebook.github.io/react-native/docs/getting-started)
+* Live coding: [starting an expo project](https://facebook.github.io/react-native/docs/getting-started)
+* Practice: creat an empty RN project (name: rn-tick-tac-toe)
+  * Use **Blank with Typescript**
+  * Name the app **Tick-Tac-Toe**
+* Read [Hello World](https://facebook.github.io/react-native/docs/tutorial#hello-world)
+
+---
+
+### [Getting started](https://facebook.github.io/react-native/docs/getting-started)
+
+Test your project can run on your smart-phone
+* `Tunnel` option will work almost always
+* Scan QR with expo - client
+* Change your code and see the app update
+<img src="./assets/redux.png" height="220px">
+
+---
+
+### [Getting started](https://facebook.github.io/react-native/docs/getting-started)
+Have you noticed that...
+* Git is initialized but has no commits
+* No `index` file (`App` is treated by expo)
+
+---
+
+### Building App with RN
+Components and styling
+* [Component](https://facebook.github.io/react-native/docs/components-and-apis)
+* Styling
+  * [StyleSheet](https://facebook.github.io/react-native/docs/style)
+  * [From the Docs](https://facebook.github.io/react-native/docs/view.html#style)
+  * [Cheat-sheet](https://github.com/vhpoet/react-native-styling-cheat-sheet)
+
+
+* A word about android vs iOS default views
+
+* A word about [RN Flexbox](https://facebook.github.io/react-native/docs/flexbox#docsNav)
+
+---
+
+### Building App with RN
+
+Practice: tick-tac-toe from web to RN
+* step 1: convert square component
+* step 2: convert board component
+* step 3: convert game component
+
+---
+
+### Building App with RN
+step 1: convert square component
+
+* [RN buttons](https://facebook.github.io/react-native/docs/button)
+> A basic button component that should render nicely on any platform. 
+Supports a minimal level of customization... If this button doesn't look right for your app, you can build your own button using `TouchableOpacity` or `TouchableNativeFeedback`.
+
+* [Customized buttons](https://facebook.github.io/react-native/docs/touchableopacity)
+
+
+---
+
+### Building App with RN
+* step 2: convert board component (set a static board)
+* step 3: convert game component (add complete game logic)
 
 ---
 
 ### Wrapping Okat-Cupid
+
+We can wrap a web-app with [react-native-webview](https://github.com/react-native-community/react-native-webview),
+Building both web and mobile app with most of the code shared.
 
 ---
 
@@ -37,4 +110,4 @@
 * Finish class practice
 
 ### Extra
-* Investigate demo project
+* Make your PlayBuzz a mobile app with [react-native-webview](https://github.com/react-native-community/react-native-webview)
