--- a/module2_frontend/m2.lesson16.md
+++ b/module2_frontend/m2.lesson16.md
@@ -41,17 +41,17 @@
 ---
 
 ### Angular basic concepts
-* [Modules](https://angular.io/guide/architecture-modules) <!-- .element: class="fragment" --><!-- .element: class="fragment" -->is a set of code relate to Application / Feature / Capabilities
+* <!-- .element: class="fragment" -->[Modules](https://angular.io/guide/architecture-modules) is a set of code relate to Application / Feature / Capabilities
 
 * Modules may contains components and  services
 <!-- .element: class="fragment" -->
 
-* [Component](https://angular.io/guide/displaying-data)<!-- .element: class="fragment" -->: View + Behaviour (Like in React)
+* <!-- .element: class="fragment" -->[Component](https://angular.io/guide/displaying-data): View + Behaviour (Like in React)
 
 * Services: common functionality / moving data around
 <!-- .element: class="fragment" -->
 
-* [Components consume services](https://angular.io/guide/architecture-services#dependency-injection)<!-- .element: class="fragment" --> - you can inject a service into a component
+* <!-- .element: class="fragment" -->[Components consume services](https://angular.io/guide/architecture-services#dependency-injection) - you can inject a service into a component
 
 
 ---
@@ -62,13 +62,13 @@
 ---
 
 ### Tour of Heroes App
-* Creat new App using [@angular\cli](https://cli.angular.io/)
+* Create new App using [@angular\cli](https://cli.angular.io/)
 * Project Overview
-* [Live Demo](https://angular.io/start)
+* [Live Demo](https://angular.io/tutorial/toh-pt0)
 
 ---
 
 ### Further reading
 * [Angular Tutorial for Beginners: Learn Angular from Scratch](https://www.youtube.com/watch?v=k5E2AVpwsko)
-* [Description Robot-factory demo base on angular tutorial](https://github.com/WEBbeast2018/angular-robot-factory)
+* [Robot-factory demo base on angular tutorial](https://github.com/WEBbeast2018/angular-robot-factory)
 
