--- a/module2_frontend/m2.self_learning.md
+++ b/module2_frontend/m2.self_learning.md
@@ -21,11 +21,21 @@ Redux
 React + Redux
 - [How components should work with react-redux](https://stackoverflow.com/a/40068198/7126139)
 
+Fetching data with Redux
+- [Redux-Thunk](https://github.com/reduxjs/redux-thunk)
+- [Redux-Saga](https://github.com/redux-saga/redux-saga)
+- [Redux-Thunk vs. Redux-Saga](https://decembersoft.com/posts/redux-thunk-vs-redux-saga/)
+
 React styling
 - [INLINE STYLES: YES OR NO?](https://www.engineyard.com/blog/inline-styles-yes-or-no)
 - [Four ways to style react components](https://codeburst.io/4-four-ways-to-style-react-components-ac6f323da822)
 - [A Unified Styling Language](https://medium.com/seek-blog/a-unified-styling-language-d0c208de2660)
 - [I swore never to use CSS in JS, here are 6 reasons why I was wrong](https://hackernoon.com/i-swore-never-to-use-css-in-js-here-are-6-reasons-why-i-was-wrong-541fe3dfdeb7)
 - [Awesome CSS in JS](https://github.com/tuchk4/awesome-css-in-js#articles)
+- [CSS Modules](https://github.com/css-modules/css-modules)
+- [Create React App: Adding a CSS Modules](https://facebook.github.io/create-react-app/docs/adding-a-css-modules-stylesheet)
+- [@material-ui/styles](https://material-ui.com/styles/basics/)
+- [Radium](https://github.com/FormidableLabs/radium/)
+- [Styled Components](https://www.styled-components.com/)
 
 ---
